# genslm

./: pyproject.toml
genslm/: config.py
