[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "genslm"
dynamic = ["version"]
description = "GenSLMs: Genome-scale language models reveal SARS-CoV-2 evolutionary dynamics."
readme = "README.md"
authors = [
    {name = "Maxim Zvyagin, Alexander Brace, Kyle Hippe, Heng Ma, Arvind Ramanathan", email = "ramanathana@anl.gov"}
]
license = {text = "MIT License"}
keywords = [
    "machine-learning",
    "artificial-inteligence", 
    "large-language-model",
    "genome-scale",
    "genomics",
    "SARS-CoV-2",
    "COVID-19",
    "HPC"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.6"
dependencies = [
    "pytorch-lightning",
    "pydantic",
    "biopython",
    "pandas",
    "natsort",
    "Jinja2",
    "transformers",
    "h5py",
    "lightning-transformers"
]
